# spark-car-recommendation

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
data/: README.md
data/processed/: .gitkeep  cars.csv  metadata.json  stats.json
data/processed/cars.parquet/: part-00000-31c19c56-0d8e-4787-a1ce-678d13bf47dc-c000.snappy.parquet  part-00000-64b88a0c-7998-47e2-8f44-6c8ee4f62df2-c000.snappy.parquet  part-00000-ef72af35-08b6-468a-b1fc-ea38451a9cb1-c000.snappy.parquet
data/raw/: .gitkeep  16888_cars_snapshot.csv  china_car_prices_snapshot.csv
docs/: MVP.md  acceptance-report.md  api-contract.md  architecture.md  data-acquisition-16888.md  data-dictionary.md  deliverables-fill-guide.md  parameter-sales-analysis.md  parameter-sales-results.md  product-requirements.md  recommendation-design.md  team-plan.md
scripts/: fetch_16888_dataset.py  fetch_16888_full_options.py  fetch_public_dataset.py  markdown_to_pdf.py
src/: __init__.py
src/recommender/: .gitkeep  __init__.py  engine.py  errors.py  loader.py  reasons.py  validation.py
src/spark_jobs/: .gitkeep  __init__.py  analyze_parameter_sales.py  clean_cars.py
src/web/: .gitkeep  __init__.py  analysis_loader.py  app.py  llm.py
src/web/static/css/: app.css
src/web/static/js/: app.js
src/web/templates/: index.html
tests/: .gitkeep  conftest.py  test_analysis_api.py  test_api.py  test_document_artifacts.py  test_full_options_acquisition.py  test_llm.py  test_parameter_sales_analysis.py  test_processed_data.py  test_recommender.py
