[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-car-recommendation"
version = "0.1.0"
description = "基于 PySpark 清洗与确定性评分的消费者购车推荐 MVP"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "Flask>=3.1,<4",
  "pyspark>=4.0,<4.1",
  "python-dotenv>=1.0,<2",
  "requests>=2.28,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
